// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`正确渲染文本按钮 1`] = `
<button
<<<<<<< HEAD
  className="sc-AxjAm hmYuEz sinoui-base-button"
=======
  className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button"
>>>>>>> origin/bottomNavigation
  role="button"
  type="button"
>
  文本按钮
</button>
`;

exports[`正确渲染链接按钮 1`] = `
<div>
  <a
<<<<<<< HEAD
    className="sc-AxjAm hmYuEz sinoui-base-button"
=======
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button"
>>>>>>> origin/bottomNavigation
    href="https://www.baidu.com/"
  >
    百度链接
  </a>
  <a
<<<<<<< HEAD
    className="sc-AxjAm hmYuEz sinoui-base-button"
=======
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button"
>>>>>>> origin/bottomNavigation
    href="https://github.com/"
  >
    github官网
  </a>
</div>
`;

exports[`禁用涟漪 1`] = `
Array [
  <button
<<<<<<< HEAD
    className="sc-AxjAm hmYuEz sinoui-base-button"
=======
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button"
>>>>>>> origin/bottomNavigation
    role="button"
    type="button"
  >
    禁用涟漪效果
  </button>,
  <button
    aria-disabled={true}
<<<<<<< HEAD
    className="sc-AxjAm gIJowi sinoui-base-button"
=======
    className="BaseButton__BaseButtonLayout-wk8p17-0 GZpaL sinoui-base-button"
>>>>>>> origin/bottomNavigation
    disabled={true}
    role="button"
    type="button"
  >
    按钮不可用
  </button>,
]
`;

exports[`自定义涟漪颜色 1`] = `
<button
<<<<<<< HEAD
  className="sc-AxjAm hmYuEz sinoui-base-button"
=======
  className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button"
>>>>>>> origin/bottomNavigation
  role="button"
  type="button"
>
  自定义涟漪效果
</button>
`;
